--- a/server/pom.xml
+++ b/server/pom.xml
@@ -44,5 +44,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <dependency>
+  <groupId>org.hamcrest</groupId>
+  <artifactId>hamcrest-core</artifactId>
+  <scope>test</scope>
+</dependency>
+
+<dependency>
+  <groupId>org.hamcrest</groupId>
+  <artifactId>hamcrest-library</artifactId>
+  <scope>test</scope>
+</dependency>
 
 </project>
